# jimmy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: config.rs
src/application/: .file.rs.swp  job.rs  keys.rs  manager.rs  monitor.rs  queue.rs  tag.rs
src/handlers/: health.rs  info.rs  job.rs  mod.rs  queue.rs  tag.rs
src/models/: error.rs
src/models/job/: mod.rs
src/models/queue/: settings.rs
tests/: test_basic.rs
tests/support/: mod.rs
